--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -10,6 +10,8 @@ COPY . .
 
 RUN addgroup -S mercari && adduser -S trainee -G mercari
 RUN chown -R trainee:mercari /app
+RUN chown -R trainee:mercari /app/db
+RUN chown -R trainee:mercari /app/images
 
 USER trainee
 
