--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    image: mercari-build-training/app:latest
+    build: ./python
     ports:
       - "9000:9000"
     environment:
@@ -10,12 +10,12 @@ services:
       - FRONT_URL=http://localhost:3000
 
   web:
-    image: mercari-build-training/web:latest
+    build: ./typescript/simple-mercari-web
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - REACT_APP_API_URL=http://localhost:9000
+      - REACT_APP_API_URL=http://app:9000
     depends_on:
       - app
 
